// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`editHasOccured is true 1`] = `
<div
  className="flex-100 layout-row layout-align-start-start layout-wrap"
>
  <div
    className="flex-100 layout-row layout-align-start-center layout-wrap mandatory_charges_box"
  >
    <div
      className="flex-75 layout-row layout-align-space-around-center charges_row_padding"
    >
      <p
        className="flex-none"
      >
        Import Fees
      </p>
      <Checkbox
        checked="IMPORT_CHARGES"
        className=""
        disabled={false}
        id="import"
        name="import"
        onChange={[Function]}
        onClick={null}
        size={null}
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
      />
    </div>
    <div
      className="flex-75 layout-row layout-align-space-around-center charges_row_padding"
    >
      <p
        className="flex-none"
      >
        Export Fees
      </p>
      <Checkbox
        checked={false}
        className=""
        disabled={false}
        id="export"
        name="export"
        onChange={[Function]}
        onClick={null}
        size={null}
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
      />
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-align-end-center"
  >
    <div
      className="save_icon_btn flex-none layout-row layout-align-end-center pointy"
      onClick={[Function]}
    >
      <p
        className="flex-none"
      >
        Save
      </p>
      <div
        className="save_icon_btn flex-none layout-row pointy"
      >
        <i
          className="fa fa-floppy-o clip"
          style={
            Object {
              "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`shallow render 1`] = `""`;

exports[`state.confirm is truthy 1`] = `
<div
  className="flex-100 layout-row layout-align-start-start layout-wrap"
>
  <AdminPromptConfirm
    confirm={[Function]}
    deny={[Function]}
    heading="Are you sure?"
    t={[Function]}
    text="These changes will be instantly available in your store"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <div
    className="flex-100 layout-row layout-align-start-center layout-wrap mandatory_charges_box"
  >
    <div
      className="flex-75 layout-row layout-align-space-around-center charges_row_padding"
    >
      <p
        className="flex-none"
      >
        Import Fees
      </p>
      <Checkbox
        checked={false}
        className=""
        disabled={false}
        id="import"
        name="import"
        onChange={[Function]}
        onClick={null}
        size={null}
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
      />
    </div>
    <div
      className="flex-75 layout-row layout-align-space-around-center charges_row_padding"
    >
      <p
        className="flex-none"
      >
        Export Fees
      </p>
      <Checkbox
        checked={false}
        className=""
        disabled={false}
        id="export"
        name="export"
        onChange={[Function]}
        onClick={null}
        size={null}
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
      />
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-align-end-center"
  />
</div>
`;

exports[`state.mandatoryChange.id is truthy 1`] = `
<div
  className="flex-100 layout-row layout-align-start-start layout-wrap"
>
  <div
    className="flex-100 layout-row layout-align-start-center layout-wrap mandatory_charges_box"
  >
    <div
      className="flex-75 layout-row layout-align-space-around-center charges_row_padding"
    >
      <p
        className="flex-none"
      >
        Import Fees
      </p>
      <Checkbox
        checked={false}
        className=""
        disabled={false}
        id="import"
        name="import"
        onChange={[Function]}
        onClick={null}
        size={null}
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
      />
    </div>
    <div
      className="flex-75 layout-row layout-align-space-around-center charges_row_padding"
    >
      <p
        className="flex-none"
      >
        Export Fees
      </p>
      <Checkbox
        checked={false}
        className=""
        disabled={false}
        id="export"
        name="export"
        onChange={[Function]}
        onClick={null}
        size={null}
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
      />
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-align-end-center"
  />
</div>
`;

exports[`theme is falsy 1`] = `""`;
